src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_acl_item__acl_item_grantor__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/mz_acl_item.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Oid,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Oid,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: None,
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
